crates/plotnik-tests/tests/03-analyze/mutual_recursion/no_escape_three_way.txt
A = (a (B))
B = (b (C))
C = (c (A))
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:3:9
  |
1 | A = (a (B))
  |         - references B
2 | B = (b (C))
  |         - references C (completing cycle)
3 | C = (c (A))
  | --------^--
  | |       |
  | |       references A
  | C is defined here
  |
help: add an alternative to `A`, `B` or `C` that does not reference any definition in this cycle
------------------ DEFINITIONS -------------------
A
  B
    C
      A (cycle)
B
  C
    A
      B (cycle)
C
  A
    B
      C (cycle)
